# ROS2_3D_Detection

./: .gitignore  LICENSE  README.md
docker/: Dockerfile
src/petr/: CMakeLists.txt  README.md  package.xml
src/petr/config/: sensor_info.yaml
src/petr/config/nuscenes_sensor_yaml/: scene-0061.yaml  scene-0103.yaml  scene-0553.yaml  scene-0655.yaml  scene-0757.yaml  scene-0796.yaml  scene-0916.yaml  scene-1077.yaml  scene-1094.yaml  scene-1100.yaml
src/petr/include/: trt_classifier.hpp  trt_detector.hpp  trt_model.hpp  trt_preprocess.hpp  trt_worker.hpp
src/petr/models/: env_test.py  onnx2trt.py  onnx2trt_int8.py
src/petr/src/cpp/: main.cpp  main_rgb.cpp  trt_classifier.cpp  trt_detector.cpp  trt_logger.cpp  trt_model.cpp  trt_preprocess.cpp  trt_preprocess.cu  trt_worker.cpp  utils.cpp
src/petr/tools/: img2gif.py
